assets/css/app.scss
/* GLOBAL */
a:not([href]).banner-impersonate {
  cursor: not-allowed;
}

/* Impersonate */
body > div.banner-impersonate {
  min-height: 50px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
  font-weight: bold;

  a {
    text-decoration: underline;
    font-style: italic;
    margin-left: 1em;
    font-size: small;
  }

  div {
    line-height: 50px;
  }
}

.login-box-body h3.login-box-title {
  text-align: center;
  margin-top: 0.2em;
  margin-bottom: 1em;
}

/* Header */

.main-header {
  z-index: 4000;
  .logo-mini img {
    max-width: 2em;
    max-height: 2em;
  }
}
.modal {
  z-index: 4050;
}
.modal-backdrop {
  z-index: 4040;
}
.dt-button-background {
  z-index: 4001;
}
.dt-button-collection {
  z-index: 4002;
}
.sidebar-menu, .main-sidebar .user-panel, .sidebar-menu>li.header {
    font-size: 14px;
    //padding: 0 0 0 15px;
  > span {
    display:block;
    padding: 25px 10px 10px 0;
  }
}
.sidebar-mini.sidebar-collapse .main-sidebar > .sidebar > .sidebar-menu li.header:hover {
  overflow: visible;
  > .sidebar-menu > li:hover > a > span {
    display: block !important;
    position: absolute;
    width: 200px;
    left: 50px;
    top: 0;
    margin-left: -3px;
    padding: 12px 5px 12px 20px;
    //
    background-color: inherit;
  }
}

.sidebar-mini.sidebar-collapse .sidebar-menu > li:not(.treeview) > a > span {
  border-bottom-right-radius: 4px;
}


.sidebar-mini.sidebar-collapse .main-sidebar > .sidebar > .sidebar-menu > li.header{
  display:block !important;
  > span {
    display:none !important;
  }
  > ul {
    display:block !important;
    width:auto;
  }
}

.sidebar-mini .main-sidebar > .sidebar > .sidebar-menu > li.header > .sidebar-menu {
    margin-left: -15px !important;
}

.dropdown-menu {
    z-index:2000;
}

/* Skiplinks */
.skiplinks {
  position: absolute;
  transform: translateY(-100%);
}
.skiplinks:focus-within {
  position: relative;
  transform: translateY(0);
}

a:focus {
  outline: 1px dashed;
}


/* Footer */
.footer-public > footer{
  margin-left:0;
}

.main-header .sidebar-toggle:before {
  content: "";
}

/* Sidebar */
.sidebar-logo {
    & img {
      width: 195px;
      height: auto;
    }
}
.sidebar-collapse .sidebar-logo {
    display: none;
}

/* Form */
.form-group>label.required:after {
  content: '*';
}
.complex-choice-group label.col-sm-2 {
  text-align: left;
  width: 100%;
}
.delay-group {
  .one-line {
    vertical-align: middle;

    > div {
      display: inline-block;
      vertical-align: middle;
    }
  }
}

.has-feedback .form-control-feedback {
  pointer-events: auto;
  cursor: pointer;
}

/* Pages */
.content-wrapper.public{
  margin-left: 0;
}

div.action-bar {
  margin-bottom: 1em;
}

/* Show */
body.show .content ul {
  -webkit-padding-start: 15px;
}



/* LOADER */
.lds-ellipsis {
  display: inline-block;
  position: relative;
  width: 14px;
  height: 14px;

  div {
    position: absolute;
    top: 6px;
    width: 2px;
    height: 2px;
    border-radius: 50%;
    background: #000000;
    animation-timing-function: cubic-bezier(0, 1, 1, 0);
  }

  div:nth-child(1) {
    left: 1.3px;
    animation: lds-ellipsis1 0.6s infinite;
  }
  div:nth-child(2) {
    left: 1.3px;
    animation: lds-ellipsis2 0.6s infinite;
  }
  div:nth-child(3) {
    left: 5.7px;
    animation: lds-ellipsis2 0.6s infinite;
  }
  div:nth-child(4) {
    left: 10px;
    animation: lds-ellipsis3 0.6s infinite;
  }
}

@keyframes lds-ellipsis1 {
  0% { transform: scale(0); }
  100% { transform: scale(1); }
}
@keyframes lds-ellipsis3 {
  0% { transform: scale(1); }
  100% { transform: scale(0); }
}
@keyframes lds-ellipsis2 {
  0% { transform: translate(0, 0); }
  100% { transform: translate(4px, 0); }
}

#tooltip {
  display:none;
  position:fixed;
  overflow:hidden;

  span.collectivity-name{
    font-size:medium;
    font-weight: bold;
  }
}
.tooltip-box{
  border: solid #01C0EF 1px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  background: #fff;
  border-radius: 2px;
  margin-bottom: 15px;
  padding:5px;
}

.report{
  display:flex;
  flex-direction: column;
  justify-content: space-around;
  i{
    font-size: 33px;
  }
}

.btn.add_question {
  margin-left: 30px;
}

.map-wrapper {
  .row{
    overflow: hidden;
    margin-right:0;
  }

  padding:0;
  [class*="col-"]{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
  }
}

.table > tbody > tr > td.concerned-people-type{
  padding-left: 30px;
}

.is-paddingless{
  .complex-choice-group{
    padding-left:0;

    .check{
      padding-left: 0;
    }
  }
}

.custom-checkbox{
  margin-top: 8px;
  margin-bottom: 16px;

  div > label {
    padding-right: 0;
    cursor: pointer;
  }
}

.sidebar-menu{
    background-color: #222d32;
}

.sidebar-menu li.header > span:first-child {
    padding: 10px 25px 10px 15px;
    font-size: 12px;
}

.sidebar-menu li.header{
    padding: 0px 5px 0px 15px;
}

.content-header-custom-padding {
  padding: 15px 0;
}

.stacked-bar-graph {
  width: 100%;
  height: 20px;

  span {
    display: inline-block;
    height:100%;
    box-sizing: border-box;
    float: left;
  }

  .bar-conforme {
    background: #00A65A;
  }

  .bar-non-conforme-mineure {
    background: #F39C12;
  }

  .bar-non-conforme-majeure {
    background: #DD4B39;
  }
}

.reponse-modal-button {
  background-color: transparent;
}

div.mesurement-hide {
  display: inline-block;

  > i.primary-i {
    color: #3779B6;
  }

  > i.warning-i {
    color: #F1902A;
  }

  > div {
    display: none;
  }

  > i:hover + div.primary {
      border: solid #3779B6 1px;
    }

  > i:hover + div.warning {
    border: solid #F1902A 1px;
  }

  > i:hover + div {
    display: block;
    position: absolute;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    background: #fff;
    border-radius: 2px;
    padding: 5px;

    > ul {
      font-weight: bold;
    }
  }
}

td.reponse-vertical-align {
  vertical-align: middle !important;
}

.nopadding {
  padding-left: 0 !important;
}

.js-table-collection-wrapper .checkbox label {
  display: flex;
  justify-content: center;
  align-items: center;
}

.craue_formflow_buttons {
  display: inline;
}

.dic-darkgreen {
  background: #d3f4e4;
}
.dic-lightgreen {
  background: #ddede0;
}
.dic-lightpink {
  background: #f4e7e6;
}
.dic-darkpink {
  background: #fbd7dd;
}
.dic-nocolor {
  background: #ffffff;
  vertical-align: middle  !important;
}
.dic-border-right {
    border-right: 1px solid black;
}
.dic-border-top {
  border-top: 1px solid black;
}
.dic-table {
  text-align: center;
  width: 80%;

  td {
    width: 20%;
    border-top: none !important;
  }
}

.border-0 {
  border: none;
}
shadow {
  box-shadow : 0 .5rem 1rem rgba(0,0,0,.15)!important;
}

#documentation-grid tr {
  display: flex;
    justify-content: space-between;
    flex-direction: column;
}

#documentation-grid>tbody>tr>td{
    border : none;
    line-height: 1;
}

.cards thead {
  display: none;
}

tr.selected td:before {
  color: #CCC;
}

td.action > a {
  white-space: nowrap;
}

.p-0 {
    padding: 0!important;
}
.p-2 {
  padding: 2rem;
}
.m-0 {
    margin : 0!important;
}
.float-left {
    float: left;
}

div.dt-button-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.7);
  background: -ms-radial-gradient(center, ellipse farthest-corner, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  background: -moz-radial-gradient(center, ellipse farthest-corner, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  background: -o-radial-gradient(center, ellipse farthest-corner, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  background: -webkit-gradient(radial, center center, 0, center center, 497, color-stop(0, rgba(0,0,0,0.3)), color-stop(1, rgba(0,0,0,0.7)));
  background: -webkit-radial-gradient(center, ellipse farthest-corner, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  background: radial-gradient(ellipse farthest-corner at center, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
  z-index: 2001;
}

div.dt-button-collection {
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  margin-top: 3px;
  padding: 8px 8px 4px 8px;
  border: 1px solid rgba(0,0,0,0.4);
  background-color: white;
  overflow: hidden;
  z-index: 2002;
  border-radius: 5px;
  box-shadow: 3px 3px 5px #000;
  box-sizing: border-box;

  button.dt-button:active:not(.disabled), button.dt-button.active:not(.disabled), div.dt-button:active:not(.disabled), div.dt-button.active:not(.disabled), a.dt-button:active:not(.disabled), a.dt-button.active:not(.disabled) {
    background-color: #dadada;
    background-image: -webkit-linear-gradient(top, #f0f0f0 0%, #dadada 100%);
    background-image: -moz-linear-gradient(top, #f0f0f0 0%, #dadada 100%);
    background-image: -ms-linear-gradient(top, #f0f0f0 0%, #dadada 100%);
    background-image: -o-linear-gradient(top, #f0f0f0 0%, #dadada 100%);
    background-image: linear-gradient(to bottom, #f0f0f0 0%, #dadada 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#f0f0f0', EndColorStr='#dadada');
    box-shadow: inset 1px 1px 3px #666;
  }
}


button.dt-button, div.dt-button, a.dt-button {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  margin-right: 0.333em;
  margin-bottom: 0.333em;
  padding: 0.5em 1em;
  border: 1px solid #999;
  border-radius: 2px;
  cursor: pointer;
  font-size: 0.88em;
  line-height: 1.6em;
  color: black;
  white-space: nowrap;
  overflow: hidden;
  background-color: #e9e9e9;
  background-image: -webkit-linear-gradient(top, #fff 0%, #e9e9e9 100%);
  background-image: -moz-linear-gradient(top, #fff 0%, #e9e9e9 100%);
  background-image: -ms-linear-gradient(top, #fff 0%, #e9e9e9 100%);
  background-image: -o-linear-gradient(top, #fff 0%, #e9e9e9 100%);
  background-image: linear-gradient(to bottom, #fff 0%, #e9e9e9 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='white', EndColorStr='#e9e9e9');
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  outline: none;
  text-overflow: ellipsis;
}

  /* ---------- NOTIFICATIONS ---------- */

  #notifications i.fa-bell {
    font-size: 16px;
  }
  #notifications .badge {
    position: relative;
    top: -10px;
    left: -5px;
  }
  #notifications .dropdown-large{
    min-width:550px;
  }
  #notifications .dropdown-large a {
    color: #3c8dbc!important;
  }
  #notifications .single-notification {
    background-color : #deedf6;
  }

  /* -------- LOGIN PAGE -------------- */
#sso_login {
  border-top: 1px solid #666;
  margin-top: 20px;

  &>span {
    position: relative;
    top: -11px;
    background: #fff;
    padding: 2px;
  }
}

td.actions > a {
  white-space: nowrap;
}

